<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarListado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/titulo_principal"
        android:background="@color/celeste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbarListado">

        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=""
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/EncabezadoTablaNombre"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/precio"
                android:textStyle="bold"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerProductos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="4dp"
            android:scrollbars="vertical" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>